# ClaudeAgents

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  example_prompt.txt  init.bat  init.sh  run-dashboard.bat  run-dashboard.sh  run.bat  run.sh  start-dashboard-dev.sh
dashboard/: index.html  package-lock.json  package.json  vite.config.ts
dashboard-api/: Dockerfile  package.json
dashboard-api/src/: index.js
dashboard/src/: App.tsx
javascript/: .eslintrc.json  jest.config.js  package.json  tsconfig.json
javascript/examples/: example-agent-invocation.js
javascript/src/: index.ts
javascript/tests/: ArchitectureDesignerAgent.test.ts  BaseAgent.test.ts  Integration.test.ts  ManagerAgent.test.js  MemoryManager.test.ts
python/: pyproject.toml  requirements.txt  setup.py  simple_test.py  test_agent.py  test_log.txt
python/examples/: example_agent_invocation.py
python/src/: main.py
python/src/agents/: __init__.py  architecture_designer_agent.py  base_agent.py  dependency_analyzer_agent.py  exception_debugger_agent.py  library_researcher_agent.py  manager_agent.py  software_planner_agent.py  software_programmer_agent.py  stack_builder_agent.py
python/src/utils/: __init__.py  ai_client.py  env_loader.py  file_operations.py  logging_setup.py  memory_manager.py  shell_executor.py  web_search.py
python/tests/: conftest.py  test_architecture_designer_agent.py  test_base_agent.py  test_exception_debugger_agent.py  test_integration.py  test_library_researcher_agent.py  test_manager_agent.py  test_software_programmer_agent.py
(+22 files in other folders)
