[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "claude_agents"
version = "0.1.0"
description = "Multi-agent system for collaborative software development"
requires-python = ">=3.9"
dependencies = [
    "openai>=1.0.0",
    "anthropic>=0.8.0",
    "pydantic>=2.0.0",
    "pytest>=7.0.0",
    "requests>=2.0.0",
    "typing-extensions>=4.0.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0"
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.0.0",
    "pytest-cov>=4.0.0"
]

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.ruff]
line-length = 100
select = ["E", "F", "B", "I"]
target-version = "py39"